2009-11-20  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fixes: NB#147560 - Live Search from Desktop stops responding in a
	sceanrio.

	* matchbox/core/mb-window-manager.[ch] (mb_wm_get_server_time): New
	utility to get a proper X server time stamp by means of zero-length
	append to a root window property and catching the corresponding
	PropertyNotify.
	(mb_wm_focus_client): Remove useless if (both branches have the same
	code).
	* matchbox/core/mb-wm-client-base.c (mb_wm_client_set_focus): Use a
	proper time stamp in the WM_TAKE_FOCUS ClientMessage.

2009-11-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.82

	* matchbox/core/mb-wm-client.[ch] (mb_wm_client_is_unmap_confirmed,
	mb_wm_client_set_unmap_confirmed): New API for detecting clients that
	have received UnmapNotify but are still in the window stack.
	* matchbox/core/mb-window-manager.c (mb_wm_handle_unmap_notify): Call
	mb_wm_client_set_unmap_confirmed here.

	Release 0.2.81

	Workaround for a funny System UI window using DND type.

	* matchbox/core/mb-wm-atoms.c, matchbox/core/mb-wm-types.h: Add
	_NET_WM_WINDOW_TYPE_DND atom.
	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Consider
	_NET_WM_WINDOW_TYPE_DND clients as normal windows.

	Plug a memory leak when turning on compositor repeatedly.

	* matchbox/comp-mgr/mb-wm-comp-mgr.c (mb_wm_comp_mgr_turn_on): Do not
	install the damage event handler if it's already installed.

2009-11-09  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.80

2009-11-09  Gordon Williams <gordon.williams@collabora.co.uk>

	Regression fixes for NB#145154 - Fixing the odd warnings about X errors

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Don't report X errors
	  from XDamageDestroy, as we don't really care.
	* matchbox/core/mb-wm-client-base.c: Move position of traps so we
	  don't end up with 2 layers of trap when the decor is refreshed
	  (this gets rid of the g_critical).