@@ -3,6 +3,8 @@ matchbox-window-manager-2 (0.2.83-1~unreleased) unstable; urgency=low
   Kimmo:
   * Fixes: NB#147560 - Live Search from Desktop stops responding in a
     sceanrio.
+  * Fixes: NB#145690 - Application manager finishing an installation in
+    background blocks keyboard input in Terminal
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 13 Nov 2009 15:49:55 +0200
 
